add config for it coverage